--- a/style.css
+++ b/style.css
@@ -19,14 +19,29 @@ header {
   margin-top: 0;
   margin-bottom: 0;
 }
-#color-palette{
+
+#color-palette {
   padding-left: 0!important;
 }
+
 .color {
   list-style: none;
   display: inline-block;
   width: 50px;
   height: 50px;
-  border: 1px solid rgb(0, 0, 0);
-  background-color: blue;
+  margin-right: 5px;
+  border: 1px solid black;
+}
+
+#pixel-board {
+  display: table; 
+}
+
+.pixel {
+  width: 40px;
+  height: 40px;
+  margin-right: 5px;
+  background-color: white;
+  border: 1px solid black;
+  display: inline-block;
 }
